fixing alignments

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ body{
 }
 .column-reply{
   padding: 1rem 0.5rem;
-  margin: 0 1.5rem 2rem 0;
+  margin: 0 1rem 2rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -151,8 +151,8 @@ body{
   margin: 0 0.3rem;
 }
 .vl {
-  border-left: 1px solid green;
-  height: 400px;
+  border-left: 2px solid hsl(223, 19%, 93%);
+  height: 310px;
   position: absolute;
   left: 28%;
   margin-left: -3px;
@@ -166,12 +166,43 @@ body{
 }
 
 /* ***************** */
+/* Make a Comment         */
+/* ***************** */
+.comment-container{
+  padding: 1.5rem 22rem 3rem;
+}
+.comment-card{
+  padding: 1.3rem 1.5rem 0.5rem;
+  border-radius: 0.5rem;
+  background-color: hsl(0, 0%, 100%);
+ display: flex;
+ justify-content: space-evenly;
+}
+#post-comment{
+  padding: 1rem 21rem 5rem 1rem;
+  border-color: hsl(228, 33%, 97%);
+  border-radius: 0.5rem;
+}
+
+.submit-btn{
+  padding: 1rem 2rem;
+  background-color: hsl(238, 40%, 52%);
+  color: #fff;
+  border-radius: .5rem;
+  border: none;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+/* ***************** */
 /* Helpers         */
 /* ***************** */
 .comment-2{
   margin-top: 1rem;
 }
+.mt-1{
+  margin: 1rem 0;
+}
 .comment-reply-{
-  margin: 0 0 0 8rem;
+  margin: 0 0 0 9rem;
   color: hsl(238, 40%, 52%);
 }
